tests/rosetta/out/Rust/check-that-file-exists.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencheck-that-file-exists1702248347/001/prog.rs:15:118
   |
15 |         let mut fs: std::collections::HashMap<&'static str, bool> = { let mut m = std::collections::BTreeMap::new(); m };
   |                                                                                                                      ^ expected `HashMap<&str, bool>`, found `BTreeMap<_, _>`
   |
   = note: expected struct `HashMap<&'static str, bool>`
              found struct `BTreeMap<_, _>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
