tests/rosetta/out/Rust/check-that-file-exists.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:54Z
fn main() {
    fn printStat(fs: std::collections::HashMap<&'static str, bool>, path: &'static str) -> () {
        if fs.contains_key(&path) {
            if fs[&path] {
                println!("{}", format!("{}{}", path, " is a directory"));
            } else {
                println!("{}", format!("{}{}", path, " is a file"));
            }
        } else {
            println!("{}", format!("{}{}", format!("{}{}", "stat ", path), ": no such file or directory"));
        }
    }
    fn main() -> () {
        let mut fs: std::collections::HashMap<&'static str, bool> = { let mut m = std::collections::BTreeMap::new(); m };
        fs.insert("docs", true);
        for p in vec!["input.txt", "/input.txt", "docs", "/docs"] {
            printStat(fs, p);
        }
    }
    main();
}
